2015-09-23  Oleg Endo  <olegendo@gcc.gnu.org>

	Backport from mainline
	2015-09-23  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/67391
	* config/sh/sh.md (addsi3, *addsi3_compact): Don't check for overlapping
	regs when matching the pattern.

2015-09-23  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	Backport from mainline
	2015-09-10  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/67439
	* config/arm/arm.md (*arm32_movhf): Remove !arm_restrict_it from
	predicate.  Set predicable_short_it attr to "no".

2015-09-23  Matthew Wahab  <matthew.wahab@arm.com>

	Backport from mainline
	2015-08-14  Matthew Wahab  <matthew.wahab@arm.com>

	PR target/67143
	* config/aarch64/atomics.md (atomic_<optab><mode>): Replace
	'lconst_atomic' with 'const_atomic'.
	(atomic_fetch_<optab><mode>): Likewise.
	(atomic_<optab>_fetch<mode>): Likewise.
	* config/aarch64/iterators.md (lconst-atomic): Move below
	'const_atomic'.
	(const_atomic): New.

2015-09-22  Chung-Lin Tang  <cltang@codesourcery.com>

	Backport from mainline
	2015-09-22  Chung-Lin Tang  <cltang@codesourcery.com>

	* config/nios2/nios2.c (nios2_legitimize_address): When handling
	'reg + reloc' cases, allow first operand to be non-REG, and use
	force_reg() to enforce address pattern.

2015-09-22  Kirill Yukhin <kirill.yukhin@intel.com>

	* gcc/config/i386/i386.md (define_insn "kunpckhi"): Fix
	operand in pattern.
	(define_insn "kunpcksi"): Ditto.
	(define_insn "kunpckdi"): Ditto.

2015-09-22  Kirill Yukhin <kirill.yukhin@intel.com>

	* gcc/config/i386/i386.md (define_split not/xor SWI1248x): Use
	iterator instead of fixed modes.

2015-09-21  Uros Bizjak  <ubizjak@gmail.com>

	PR middle-end/67619
	* except.c (expand_builtin_eh_return): Use copy_addr_to_reg to copy
	the address to a register.

2015-09-21  Oleg Endo  <olegendo@gcc.gnu.org>

	Backport from mainline
	2015-09-21  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/67657
	* config/sh/sh.c (sh_remove_overlapping_post_inc,
	sh_peephole_emit_move_insn): Add new functions.